--- a/templates/view/gooddetail/index.html
+++ b/templates/view/gooddetail/index.html
@@ -28,7 +28,7 @@
                 <span class="icon icon-func"></span>全部商品分类
                 <span class="icon icon-fold"></span>
                 <!--商品二级菜单-->
-                <div class="clearfix cates-banner " id="banner">
+                <div class="clearfix cates-banner " id="banner" >
                     <ul class="abso cates" id="cates">
                         <li class="cate">
                             <div class="white"></div>
@@ -577,21 +577,21 @@
             <a href="#" class="link ">
                 首页
             </a>
-            <a href="#" class="link ">
-                官网直购搜索
+            <a href="#" class="link active">
+                商品搜索
             </a>
             <a href="#" class="link ">
                 官网大促
             </a>
-            <a href="#" class="link ">
-                商家
-            </a>
+            <!-- <a href="#" class="link ">
+                 商家
+             </a>-->
             <a href="#" class="link ">
                 品牌
             </a>
-            <a href="#" class="link ">
+            <!--<a href="#" class="link ">
                 一键购
-            </a>
+            </a>-->
         </div><!--navs end-->
 
     </div><!--specify end-->
@@ -671,7 +671,7 @@
                         <div class="row1" style="position: relative;">
                             <div class="scan">
                                 <div class="text">
-                                    <b>扫一扫下载</b>官网直购APP
+                                    <b>扫一扫</b>关注微信公众号
                                 </div >
                                 <img class="qrcode" src="../../images/gooddetail/qrcode.png">
                             </div><!--scan 结束-->
@@ -698,7 +698,7 @@
                             </dl><!--dl 1 end-->
                             <dl class="promption">
                                 <dt>
-                                    <div class="promption__tag">优惠券</div>限时全场关税补贴优惠券
+                                    <div class="promption__tag">优惠券</div>限时使用优惠券
                                     <span class="promption__btn">立即领取</span>
                                 </dt>
                             </dl><!--promption end-->
@@ -710,24 +710,24 @@
                                     <li>
                                         <h2>商家</h2>
                                             <span id="seller"><!-- <span class="pull-left">由</span> -->
-                                                <div class="nation-flag" title="美国" style="background-image: url('../../images/gooddetail/USA.png'); width: 23px; height: 17px;">
+                                                <!--<div class="nation-flag" title="美国" style="background-image: url('../../images/gooddetail/USA.png'); width: 23px; height: 17px;">
 
                                                 </div>
-                                                <a class="pull-left" target="_blank" href="#">Shop Spring</a>
+                                                <a class="pull-left" target="_blank" href="#">Shop Spring</a>-->
                                                 官网发货，预计10-20个工作日内可到货
                                             </span>
                                     </li>
                                     <li>
                                         <h2>运费</h2>
-                                            <span id="shipMoney">官网运费 免邮<br>预估国际运费 ¥ 90
-                                                <span class="ques hTip-element" data-idx="0" data-variable="_htip">?</span>
+                                            <span id="shipMoney">官网运费 免邮<br><!--预估国际运费 ¥ 90-->
+                                                <!--<span class="ques hTip-element" data-idx="0" data-variable="_htip">?</span>-->
                                             </span>
                                     </li>
-                                    <li>
+                                    <!--<li>
                                         <h2>关税</h2>
                                         <span id="tariffRate">¥ 53</span>
                                         <span class="ques hoverTip-element" data-idx="0" data-variable="_hovertip" style="top: 2px;">?</span>
-                                    </li>
+                                    </li>-->
                                 </ul>
                             </div>
                         </div><!--row3 end -->
@@ -803,9 +803,9 @@
                         <div class="row5">
                             <a class="buy j_add_cart" style="display: block;">加入购物车</a>
                             <a class="no-goods" style="display: none;">暂时缺货</a>
-                            <a id="offical-site" target="_blank" href="#" style="display: block;">官网直达链接</a>
+                            <a id="offical-site" target="_blank" href="#" style="display: block;">立即购买</a>
                         </div><!--row5 end-->
-                        <div class="row6">提示：由于魅加商城的商品的特殊性，本商品不支持无理由退换</div>
+                        <!--<div class="row6">提示：由于魅加商城的商品的特殊性，本商品不支持无理由退换</div>-->
                         <!---->
                     </div><!--xbase end-->
                 </div><!--good-info end-->
@@ -870,8 +870,8 @@
                         <h4>Barricade Classic Bounce Shoes</h4>
                         <span class="real-price">¥720</span>
                         <div class="price-info"><span class="real">$100</span></div>
-                        <div class="line"></div>
-                        <div class="seller-info">商家：Shop Spring，美国</div>
+                     <!--   <div class="line"></div>
+                        <div class="seller-info">商家：Shop Spring，美国</div>-->
                     </div><!--goods-card end-->
                     <div class="goods-card">
                         <div style="padding: 8px;">
@@ -883,8 +883,8 @@
                         <h4>Barricade Classic Bounce Shoes</h4>
                         <span class="real-price">¥720</span>
                         <div class="price-info"><span class="real">$100</span></div>
-                        <div class="line"></div>
-                        <div class="seller-info">商家：Shop Spring，美国</div>
+                        <!--   <div class="line"></div>
+                           <div class="seller-info">商家：Shop Spring，美国</div>-->
                     </div><!--goods-card end-->
                     <div class="goods-card">
                         <div style="padding: 8px;">
@@ -896,8 +896,8 @@
                         <h4>Barricade Classic Bounce Shoes</h4>
                         <span class="real-price">¥720</span>
                         <div class="price-info"><span class="real">$100</span></div>
-                        <div class="line"></div>
-                        <div class="seller-info">商家：Shop Spring，美国</div>
+                        <!--   <div class="line"></div>
+                           <div class="seller-info">商家：Shop Spring，美国</div>-->
                     </div><!--goods-card end-->
                     <div class="goods-card">
                         <div style="padding: 8px;">
@@ -909,8 +909,8 @@
                         <h4>Barricade Classic Bounce Shoes</h4>
                         <span class="real-price">¥720</span>
                         <div class="price-info"><span class="real">$100</span></div>
-                        <div class="line"></div>
-                        <div class="seller-info">商家：Shop Spring，美国</div>
+                        <!--   <div class="line"></div>
+                           <div class="seller-info">商家：Shop Spring，美国</div>-->
                     </div><!--goods-card end-->
                     <div class="goods-card">
                         <div style="padding: 8px;">
@@ -922,8 +922,8 @@
                         <h4>Barricade Classic Bounce Shoes</h4>
                         <span class="real-price">¥720</span>
                         <div class="price-info"><span class="real">$100</span></div>
-                        <div class="line"></div>
-                        <div class="seller-info">商家：Shop Spring，美国</div>
+                        <!--   <div class="line"></div>
+                           <div class="seller-info">商家：Shop Spring，美国</div>-->
                     </div><!--goods-card end-->
                 </div><!--goods-pad end -->
             </div><!--relative-goods-->
@@ -985,8 +985,8 @@
                             <h4>Alphabounce Shoes</h4>
                             <span class="real-price">¥936</span>
                             <div class="price-info"><span class="real">$130</span></div>
-                            <div class="line"></div>
-                            <div class="seller-info">商家：Shop Spring，美国</div>
+                           <!-- <div class="line"></div>
+                            <div class="seller-info">商家：Shop Spring，美国</div>-->
                         </div>
                         <div class="goods-card">
                             <div style="padding: 0 8px">
@@ -998,8 +998,8 @@
                             <h4>Alphabounce Shoes</h4>
                             <span class="real-price">¥936</span>
                             <div class="price-info"><span class="real">$130</span></div>
-                            <div class="line"></div>
-                            <div class="seller-info">商家：Shop Spring，美国</div>
+                       <!--     <div class="line"></div>
+                            <div class="seller-info">商家：Shop Spring，美国</div>-->
                         </div>
 
                     </div>
@@ -1091,7 +1091,7 @@
         </li>
     </ul>
 
-    <div class="statement clearfix">© 2011-2017 合肥魅加网络科技有限公司 沪ICP备13007891号</div>
+    <div class="statement clearfix">© 2011-2017 XXXXX网络科技有限公司 备11021445号</div>
 </div>
 
 
