--- a/templates/view/header/index.html
+++ b/templates/view/header/index.html
@@ -15,7 +15,7 @@
     <div class="specify">
         <div class="menus fl">
             <a href="#">
-                <span>返回55海淘主页</span>
+                <span>返回网站主页</span>
             </a>
         </div><!--menus end-->
         <div class="funcs fr">
@@ -36,14 +36,14 @@
                 </span>
             </a>
             <a href="#" class="fl mRight17">
-                <span>我的官网直购订单</span>
+                <span>我的订单</span>
             </a>
             <a href="#" class="fl mRight17">
                 <span>帮助中心</span>
             </a>
-            <a href="#" class="fl mRight17">
+            <!--<a href="#" class="fl mRight17">
                 <span>下载APP</span>
-            </a>
+            </a>-->
 
         </div><!--funcs end-->
     </div><!--specify end-->
