--- a/templates/view/msales/index.html
+++ b/templates/view/msales/index.html
@@ -28,7 +28,7 @@
                 <span class="icon icon-func"></span>全部商品分类
                 <span class="icon icon-fold"></span>
                 <!--商品二级菜单-->
-                <div class="clearfix cates-banner " id="banner">
+                <div class="clearfix cates-banner " id="banner" >
                     <ul class="abso cates" id="cates">
                         <li class="cate">
                             <div class="white"></div>
@@ -577,21 +577,21 @@
             <a href="#" class="link ">
                 首页
             </a>
-            <a href="#" class="link ">
-                官网直购搜索
-            </a>
             <a href="#" class="link active">
+                商品搜索
+            </a>
+            <a href="#" class="link ">
                 官网大促
             </a>
-            <a href="#" class="link ">
-                商家
-            </a>
+            <!-- <a href="#" class="link ">
+                 商家
+             </a>-->
             <a href="#" class="link ">
                 品牌
             </a>
-            <a href="#" class="link ">
+            <!--<a href="#" class="link ">
                 一键购
-            </a>
+            </a>-->
         </div><!--navs end-->
 
     </div><!--specify end-->
@@ -1034,7 +1034,7 @@
         </li>
     </ul>
 
-    <div class="statement clearfix">© 2011-2017 合肥魅加网络科技有限公司 沪ICP备13007891号</div>
+    <div class="statement clearfix">© 2011-2017 XXXXX网络科技有限公司 备11021445号</div>
 </div>
 
 
