--- a/templates/css/bases/common.css
+++ b/templates/css/bases/common.css
@@ -2,7 +2,7 @@
     display: block;
     height: 100px;
     width: 100%;
-    background-image: url(../../images/top_adv.jpg);
+    background-image: url('../../images/top_adv.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
